@@ -52,6 +52,7 @@ Incompatible changes
 Features added
 --------------
 
+* #2951: Add ``--implicit-namespaces`` PEP-0420 support to apidoc.
 * Add ``:caption:`` option for sphinx.ext.inheritance_diagram.
 * #2471: Add config variable for default doctest flags.
 * Convert linkcheck builder to requests for better encoding handling
